sources/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt
Rule 2     program -> stmt program
Rule 3     program -> END_STATEMENT stmt program
Rule 4     stmt -> simple_stmt
Rule 5     stmt -> compound_stmt
Rule 6     simple_stmt -> small_stmt END_STATEMENT
Rule 7     small_stmt -> assignment
Rule 8     small_stmt -> const_decl
Rule 9     small_stmt -> expr
Rule 10    small_stmt -> return_stmt
Rule 11    small_stmt -> display
Rule 12    small_stmt -> loop_stmt
Rule 13    return_stmt -> RETURN
Rule 14    return_stmt -> RETURN expr
Rule 15    loop_stmt -> BREAK
Rule 16    loop_stmt -> CONTINUE
Rule 17    display -> DISPLAY LPAREN expr RPAREN
Rule 18    assignment -> IDENTIFIER ASSIGN expr
Rule 19    assignment -> IDENTIFIER ASSIGN LSBRACKET list_args RSBRACKET
Rule 20    assignment -> IDENTIFIER LSBRACKET expr RSBRACKET ASSIGN expr
Rule 21    const_decl -> IDENTIFIER CONST expr
Rule 22    const_decl -> IDENTIFIER CONST LSBRACKET list_args RSBRACKET
Rule 23    func_call -> IDENTIFIER LPAREN list_args RPAREN
Rule 24    func_call -> IDENTIFIER LPAREN RPAREN
Rule 25    list_args -> expr
Rule 26    list_args -> expr COMMA list_args
Rule 27    expr -> IDENTIFIER
Rule 28    expr -> IDENTIFIER LSBRACKET expr RSBRACKET
Rule 29    expr -> LPAREN expr RPAREN
Rule 30    expr -> func_call
Rule 31    expr -> INTEGER
Rule 32    expr -> DOUBLE
Rule 33    expr -> boolean
Rule 34    boolean -> TRUE
Rule 35    boolean -> FALSE
Rule 36    expr -> expr ADD_OP expr
Rule 37    expr -> expr SUB_OP expr
Rule 38    expr -> expr MUL_OP expr
Rule 39    expr -> expr DIV_OP expr
Rule 40    expr -> expr MOD_OP expr
Rule 41    expr -> expr OR expr
Rule 42    expr -> expr AND expr
Rule 43    expr -> expr CEQ expr
Rule 44    expr -> expr CNE expr
Rule 45    expr -> expr CLT expr
Rule 46    expr -> expr CLE expr
Rule 47    expr -> expr CGT expr
Rule 48    expr -> expr CGE expr
Rule 49    expr -> SUB_OP expr
Rule 50    compound_stmt -> func_def
Rule 51    compound_stmt -> if_stmt
Rule 52    compound_stmt -> while_stmt
Rule 53    compound_stmt -> for_stmt
Rule 54    func_def -> FUNCTION head END_STATEMENT INDENT body DEDENT
Rule 55    head -> IDENTIFIER LPAREN func_def_args RPAREN COLON
Rule 56    head -> IDENTIFIER LPAREN RPAREN COLON
Rule 57    head -> IDENTIFIER LPAREN func_def_args RPAREN RETURN T_INT COLON
Rule 58    head -> IDENTIFIER LPAREN RPAREN RETURN T_INT COLON
Rule 59    head -> IDENTIFIER LPAREN func_def_args RPAREN RETURN T_DOUBLE COLON
Rule 60    head -> IDENTIFIER LPAREN RPAREN RETURN T_DOUBLE COLON
Rule 61    head -> IDENTIFIER LPAREN func_def_args RPAREN RETURN T_BOOL COLON
Rule 62    head -> IDENTIFIER LPAREN RPAREN RETURN T_BOOL COLON
Rule 63    head -> IDENTIFIER LPAREN func_def_args RPAREN RETURN T_LIST_INT COLON
Rule 64    head -> IDENTIFIER LPAREN RPAREN RETURN T_LIST_INT COLON
Rule 65    head -> IDENTIFIER LPAREN func_def_args RPAREN RETURN T_LIST_DOUBLE COLON
Rule 66    head -> IDENTIFIER LPAREN RPAREN RETURN T_LIST_DOUBLE COLON
Rule 67    head -> IDENTIFIER LPAREN func_def_args RPAREN RETURN T_LIST_BOOL COLON
Rule 68    head -> IDENTIFIER LPAREN RPAREN RETURN T_LIST_BOOL COLON
Rule 69    func_def_args -> argument
Rule 70    func_def_args -> argument COMMA func_def_args
Rule 71    argument -> T_INT IDENTIFIER
Rule 72    argument -> T_DOUBLE IDENTIFIER
Rule 73    argument -> T_BOOL IDENTIFIER
Rule 74    argument -> T_LIST_INT IDENTIFIER
Rule 75    argument -> T_LIST_DOUBLE IDENTIFIER
Rule 76    argument -> T_LIST_BOOL IDENTIFIER
Rule 77    body -> stmt
Rule 78    body -> stmt body
Rule 79    while_stmt -> WHILE expr COLON END_STATEMENT INDENT body DEDENT
Rule 80    for_stmt -> FOR IDENTIFIER IN RANGE LPAREN expr COMMA expr RPAREN COLON END_STATEMENT INDENT body DEDENT
Rule 81    for_stmt -> FOR IDENTIFIER IN IDENTIFIER COLON END_STATEMENT INDENT body DEDENT
Rule 82    if_stmt -> IF expr COLON END_STATEMENT INDENT body DEDENT
Rule 83    if_stmt -> IF expr COLON END_STATEMENT INDENT body DEDENT elseif_list
Rule 84    if_stmt -> IF expr COLON END_STATEMENT INDENT body DEDENT elseif_list ELSE COLON END_STATEMENT INDENT body DEDENT
Rule 85    if_stmt -> IF expr COLON END_STATEMENT INDENT body DEDENT ELSE COLON END_STATEMENT INDENT body DEDENT
Rule 86    elseif_list -> ELSEIF expr COLON END_STATEMENT INDENT body DEDENT
Rule 87    elseif_list -> ELSEIF expr COLON END_STATEMENT INDENT body DEDENT elseif_list

Terminals, with rules where they appear

ADD_OP               : 36
AND                  : 42
ASSIGN               : 18 19 20
BREAK                : 15
CEQ                  : 43
CGE                  : 48
CGT                  : 47
CLE                  : 46
CLT                  : 45
CNE                  : 44
COLON                : 55 56 57 58 59 60 61 62 63 64 65 66 67 68 79 80 81 82 83 84 84 85 85 86 87
COMMA                : 26 70 80
CONST                : 21 22
CONTINUE             : 16
DEDENT               : 54 79 80 81 82 83 84 84 85 85 86 87
DISPLAY              : 17
DIV_OP               : 39
DOUBLE               : 32
ELSE                 : 84 85
ELSEIF               : 86 87
END_STATEMENT        : 3 6 54 79 80 81 82 83 84 84 85 85 86 87
FALSE                : 35
FOR                  : 80 81
FUNCTION             : 54
IDENTIFIER           : 18 19 20 21 22 23 24 27 28 55 56 57 58 59 60 61 62 63 64 65 66 67 68 71 72 73 74 75 76 80 81 81
IF                   : 82 83 84 85
IN                   : 80 81
INDENT               : 54 79 80 81 82 83 84 84 85 85 86 87
INTEGER              : 31
LPAREN               : 17 23 24 29 55 56 57 58 59 60 61 62 63 64 65 66 67 68 80
LSBRACKET            : 19 20 22 28
MOD_OP               : 40
MUL_OP               : 38
OR                   : 41
RANGE                : 80
RETURN               : 13 14 57 58 59 60 61 62 63 64 65 66 67 68
RPAREN               : 17 23 24 29 55 56 57 58 59 60 61 62 63 64 65 66 67 68 80
RSBRACKET            : 19 20 22 28
SUB_OP               : 37 49
TRUE                 : 34
T_BOOL               : 61 62 73
T_DOUBLE             : 59 60 72
T_INT                : 57 58 71
T_LIST_BOOL          : 67 68 76
T_LIST_DOUBLE        : 65 66 75
T_LIST_INT           : 63 64 74
WHILE                : 79
error                : 

Nonterminals, with rules where they appear

argument             : 69 70
assignment           : 7
body                 : 54 78 79 80 81 82 83 84 84 85 85 86 87
boolean              : 33
compound_stmt        : 5
const_decl           : 8
display              : 11
elseif_list          : 83 84 87
expr                 : 9 14 17 18 20 20 21 25 26 28 29 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 79 80 80 82 83 84 85 86 87
for_stmt             : 53
func_call            : 30
func_def             : 50
func_def_args        : 55 57 59 61 63 65 67 70
head                 : 54
if_stmt              : 51
list_args            : 19 22 23 26
loop_stmt            : 12
program              : 2 3 0
return_stmt          : 10
simple_stmt          : 4
small_stmt           : 6
stmt                 : 1 2 3 77 78
while_stmt           : 52

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt
    (2) program -> . stmt program
    (3) program -> . END_STATEMENT stmt program
    (4) stmt -> . simple_stmt
    (5) stmt -> . compound_stmt
    (6) simple_stmt -> . small_stmt END_STATEMENT
    (50) compound_stmt -> . func_def
    (51) compound_stmt -> . if_stmt
    (52) compound_stmt -> . while_stmt
    (53) compound_stmt -> . for_stmt
    (7) small_stmt -> . assignment
    (8) small_stmt -> . const_decl
    (9) small_stmt -> . expr
    (10) small_stmt -> . return_stmt
    (11) small_stmt -> . display
    (12) small_stmt -> . loop_stmt
    (54) func_def -> . FUNCTION head END_STATEMENT INDENT body DEDENT
    (82) if_stmt -> . IF expr COLON END_STATEMENT INDENT body DEDENT
    (83) if_stmt -> . IF expr COLON END_STATEMENT INDENT body DEDENT elseif_list
    (84) if_stmt -> . IF expr COLON END_STATEMENT INDENT body DEDENT elseif_list ELSE COLON END_STATEMENT INDENT body DEDENT
    (85) if_stmt -> . IF expr COLON END_STATEMENT INDENT body DEDENT ELSE COLON END_STATEMENT INDENT body DEDENT
    (79) while_stmt -> . WHILE expr COLON END_STATEMENT INDENT body DEDENT
    (80) for_stmt -> . FOR IDENTIFIER IN RANGE LPAREN expr COMMA expr RPAREN COLON END_STATEMENT INDENT body DEDENT
    (81) for_stmt -> . FOR IDENTIFIER IN IDENTIFIER COLON END_STATEMENT INDENT body DEDENT
    (18) assignment -> . IDENTIFIER ASSIGN expr
    (19) assignment -> . IDENTIFIER ASSIGN LSBRACKET list_args RSBRACKET
    (20) assignment -> . IDENTIFIER LSBRACKET expr RSBRACKET ASSIGN expr
    (21) const_decl -> . IDENTIFIER CONST expr
    (22) const_decl -> . IDENTIFIER CONST LSBRACKET list_args RSBRACKET
    (27) expr -> . IDENTIFIER
    (28) expr -> . IDENTIFIER LSBRACKET expr RSBRACKET
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . func_call
    (31) expr -> . INTEGER
    (32) expr -> . DOUBLE
    (33) expr -> . boolean
    (36) expr -> . expr ADD_OP expr
    (37) expr -> . expr SUB_OP expr
    (38) expr -> . expr MUL_OP expr
    (39) expr -> . expr DIV_OP expr
    (40) expr -> . expr MOD_OP expr
    (41) expr -> . expr OR expr
    (42) expr -> . expr AND expr
    (43) expr -> . expr CEQ expr
    (44) expr -> . expr CNE expr
    (45) expr -> . expr CLT expr
    (46) expr -> . expr CLE expr
    (47) expr -> . expr CGT expr
    (48) expr -> . expr CGE expr
    (49) expr -> . SUB_OP expr
    (13) return_stmt -> . RETURN
    (14) return_stmt -> . RETURN expr
    (17) display -> . DISPLAY LPAREN expr RPAREN
    (15) loop_stmt -> . BREAK
    (16) loop_stmt -> . CONTINUE
    (23) func_call -> . IDENTIFIER LPAREN list_args RPAREN
    (24) func_call -> . IDENTIFIER LPAREN RPAREN
    (34) boolean -> . TRUE
    (35) boolean -> . FALSE

    END_STATEMENT   shift and go to state 15
    FUNCTION        shift and go to state 1
    IF              shift and go to state 24
    WHILE           shift and go to state 3
    FOR             shift and go to state 9
    IDENTIFIER      shift and go to state 13
    LPAREN          shift and go to state 22
    INTEGER         shift and go to state 7
    DOUBLE          shift and go to state 32
    SUB_OP          shift and go to state 28
    RETURN          shift and go to state 6
    DISPLAY         shift and go to state 11
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 31
    TRUE            shift and go to state 8
    FALSE           shift and go to state 23

    func_call                      shift and go to state 25
    if_stmt                        shift and go to state 26
    func_def                       shift and go to state 16
    simple_stmt                    shift and go to state 17
    assignment                     shift and go to state 18
    boolean                        shift and go to state 4
    for_stmt                       shift and go to state 20
    stmt                           shift and go to state 19
    display                        shift and go to state 33
    small_stmt                     shift and go to state 2
    while_stmt                     shift and go to state 30
    program                        shift and go to state 12
    return_stmt                    shift and go to state 5
    loop_stmt                      shift and go to state 21
    expr                           shift and go to state 27
    const_decl                     shift and go to state 10
    compound_stmt                  shift and go to state 14

state 1

    (54) func_def -> FUNCTION . head END_STATEMENT INDENT body DEDENT
    (55) head -> . IDENTIFIER LPAREN func_def_args RPAREN COLON
    (56) head -> . IDENTIFIER LPAREN RPAREN COLON
    (57) head -> . IDENTIFIER LPAREN func_def_args RPAREN RETURN T_INT COLON
    (58) head -> . IDENTIFIER LPAREN RPAREN RETURN T_INT COLON
    (59) head -> . IDENTIFIER LPAREN func_def_args RPAREN RETURN T_DOUBLE COLON
    (60) head -> . IDENTIFIER LPAREN RPAREN RETURN T_DOUBLE COLON
    (61) head -> . IDENTIFIER LPAREN func_def_args RPAREN RETURN T_BOOL COLON
    (62) head -> . IDENTIFIER LPAREN RPAREN RETURN T_BOOL COLON
    (63) head -> . IDENTIFIER LPAREN func_def_args RPAREN RETURN T_LIST_INT COLON
    (64) head -> . IDENTIFIER LPAREN RPAREN RETURN T_LIST_INT COLON
    (65) head -> . IDENTIFIER LPAREN func_def_args RPAREN RETURN T_LIST_DOUBLE COLON
    (66) head -> . IDENTIFIER LPAREN RPAREN RETURN T_LIST_DOUBLE COLON
    (67) head -> . IDENTIFIER LPAREN func_def_args RPAREN RETURN T_LIST_BOOL COLON
    (68) head -> . IDENTIFIER LPAREN RPAREN RETURN T_LIST_BOOL COLON

    IDENTIFIER      shift and go to state 35

    head                           shift and go to state 34

state 2

    (6) simple_stmt -> small_stmt . END_STATEMENT

    END_STATEMENT   shift and go to state 36


state 3

    (79) while_stmt -> WHILE . expr COLON END_STATEMENT INDENT body DEDENT
    (27) expr -> . IDENTIFIER
    (28) expr -> . IDENTIFIER LSBRACKET expr RSBRACKET
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . func_call
    (31) expr -> . INTEGER
    (32) expr -> . DOUBLE
    (33) expr -> . boolean
    (36) expr -> . expr ADD_OP expr
    (37) expr -> . expr SUB_OP expr
    (38) expr -> . expr MUL_OP expr
    (39) expr -> . expr DIV_OP expr
    (40) expr -> . expr MOD_OP expr
    (41) expr -> . expr OR expr
    (42) expr -> . expr AND expr
    (43) expr -> . expr CEQ expr
    (44) expr -> . expr CNE expr
    (45) expr -> . expr CLT expr
    (46) expr -> . expr CLE expr
    (47) expr -> . expr CGT expr
    (48) expr -> . expr CGE expr
    (49) expr -> . SUB_OP expr
    (23) func_call -> . IDENTIFIER LPAREN list_args RPAREN
    (24) func_call -> . IDENTIFIER LPAREN RPAREN
    (34) boolean -> . TRUE
    (35) boolean -> . FALSE

    IDENTIFIER      shift and go to state 37
    LPAREN          shift and go to state 22
    INTEGER         shift and go to state 7
    DOUBLE          shift and go to state 32
    SUB_OP          shift and go to state 28
    TRUE            shift and go to state 8
    FALSE           shift and go to state 23

    expr                           shift and go to state 38
    boolean                        shift and go to state 4
    func_call                      shift and go to state 25

state 4

    (33) expr -> boolean .

    ADD_OP          reduce using rule 33 (expr -> boolean .)
    SUB_OP          reduce using rule 33 (expr -> boolean .)
    MUL_OP          reduce using rule 33 (expr -> boolean .)
    DIV_OP          reduce using rule 33 (expr -> boolean .)
    MOD_OP          reduce using rule 33 (expr -> boolean .)
    OR              reduce using rule 33 (expr -> boolean .)
    AND             reduce using rule 33 (expr -> boolean .)
    CEQ             reduce using rule 33 (expr -> boolean .)
    CNE             reduce using rule 33 (expr -> boolean .)
    CLT             reduce using rule 33 (expr -> boolean .)
    CLE             reduce using rule 33 (expr -> boolean .)
    CGT             reduce using rule 33 (expr -> boolean .)
    CGE             reduce using rule 33 (expr -> boolean .)
    END_STATEMENT   reduce using rule 33 (expr -> boolean .)
    COLON           reduce using rule 33 (expr -> boolean .)
    RPAREN          reduce using rule 33 (expr -> boolean .)
    RSBRACKET       reduce using rule 33 (expr -> boolean .)
    COMMA           reduce using rule 33 (expr -> boolean .)


state 5

    (10) small_stmt -> return_stmt .

    END_STATEMENT   reduce using rule 10 (small_stmt -> return_stmt .)


state 6

    (13) return_stmt -> RETURN .
    (14) return_stmt -> RETURN . expr
    (27) expr -> . IDENTIFIER
    (28) expr -> . IDENTIFIER LSBRACKET expr RSBRACKET
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . func_call
    (31) expr -> . INTEGER
    (32) expr -> . DOUBLE
    (33) expr -> . boolean
    (36) expr -> . expr ADD_OP expr
    (37) expr -> . expr SUB_OP expr
    (38) expr -> . expr MUL_OP expr
    (39) expr -> . expr DIV_OP expr
    (40) expr -> . expr MOD_OP expr
    (41) expr -> . expr OR expr
    (42) expr -> . expr AND expr
    (43) expr -> . expr CEQ expr
    (44) expr -> . expr CNE expr
    (45) expr -> . expr CLT expr
    (46) expr -> . expr CLE expr
    (47) expr -> . expr CGT expr
    (48) expr -> . expr CGE expr
    (49) expr -> . SUB_OP expr
    (23) func_call -> . IDENTIFIER LPAREN list_args RPAREN
    (24) func_call -> . IDENTIFIER LPAREN RPAREN
    (34) boolean -> . TRUE
    (35) boolean -> . FALSE

    END_STATEMENT   reduce using rule 13 (return_stmt -> RETURN .)
    IDENTIFIER      shift and go to state 37
    LPAREN          shift and go to state 22
    INTEGER         shift and go to state 7
    DOUBLE          shift and go to state 32
    SUB_OP          shift and go to state 28
    TRUE            shift and go to state 8
    FALSE           shift and go to state 23

    func_call                      shift and go to state 25
    expr                           shift and go to state 39
    boolean                        shift and go to state 4

state 7

    (31) expr -> INTEGER .

    ADD_OP          reduce using rule 31 (expr -> INTEGER .)
    SUB_OP          reduce using rule 31 (expr -> INTEGER .)
    MUL_OP          reduce using rule 31 (expr -> INTEGER .)
    DIV_OP          reduce using rule 31 (expr -> INTEGER .)
    MOD_OP          reduce using rule 31 (expr -> INTEGER .)
    OR              reduce using rule 31 (expr -> INTEGER .)
    AND             reduce using rule 31 (expr -> INTEGER .)
    CEQ             reduce using rule 31 (expr -> INTEGER .)
    CNE             reduce using rule 31 (expr -> INTEGER .)
    CLT             reduce using rule 31 (expr -> INTEGER .)
    CLE             reduce using rule 31 (expr -> INTEGER .)
    CGT             reduce using rule 31 (expr -> INTEGER .)
    CGE             reduce using rule 31 (expr -> INTEGER .)
    END_STATEMENT   reduce using rule 31 (expr -> INTEGER .)
    COLON           reduce using rule 31 (expr -> INTEGER .)
    RPAREN          reduce using rule 31 (expr -> INTEGER .)
    RSBRACKET       reduce using rule 31 (expr -> INTEGER .)
    COMMA           reduce using rule 31 (expr -> INTEGER .)


state 8

    (34) boolean -> TRUE .

    ADD_OP          reduce using rule 34 (boolean -> TRUE .)
    SUB_OP          reduce using rule 34 (boolean -> TRUE .)
    MUL_OP          reduce using rule 34 (boolean -> TRUE .)
    DIV_OP          reduce using rule 34 (boolean -> TRUE .)
    MOD_OP          reduce using rule 34 (boolean -> TRUE .)
    OR              reduce using rule 34 (boolean -> TRUE .)
    AND             reduce using rule 34 (boolean -> TRUE .)
    CEQ             reduce using rule 34 (boolean -> TRUE .)
    CNE             reduce using rule 34 (boolean -> TRUE .)
    CLT             reduce using rule 34 (boolean -> TRUE .)
    CLE             reduce using rule 34 (boolean -> TRUE .)
    CGT             reduce using rule 34 (boolean -> TRUE .)
    CGE             reduce using rule 34 (boolean -> TRUE .)
    END_STATEMENT   reduce using rule 34 (boolean -> TRUE .)
    COLON           reduce using rule 34 (boolean -> TRUE .)
    RPAREN          reduce using rule 34 (boolean -> TRUE .)
    RSBRACKET       reduce using rule 34 (boolean -> TRUE .)
    COMMA           reduce using rule 34 (boolean -> TRUE .)


state 9

    (80) for_stmt -> FOR . IDENTIFIER IN RANGE LPAREN expr COMMA expr RPAREN COLON END_STATEMENT INDENT body DEDENT
    (81) for_stmt -> FOR . IDENTIFIER IN IDENTIFIER COLON END_STATEMENT INDENT body DEDENT

    IDENTIFIER      shift and go to state 40


state 10

    (8) small_stmt -> const_decl .

    END_STATEMENT   reduce using rule 8 (small_stmt -> const_decl .)


state 11

    (17) display -> DISPLAY . LPAREN expr RPAREN

    LPAREN          shift and go to state 41


state 12

    (0) S' -> program .



state 13

    (18) assignment -> IDENTIFIER . ASSIGN expr
    (19) assignment -> IDENTIFIER . ASSIGN LSBRACKET list_args RSBRACKET
    (20) assignment -> IDENTIFIER . LSBRACKET expr RSBRACKET ASSIGN expr
    (21) const_decl -> IDENTIFIER . CONST expr
    (22) const_decl -> IDENTIFIER . CONST LSBRACKET list_args RSBRACKET
    (27) expr -> IDENTIFIER .
    (28) expr -> IDENTIFIER . LSBRACKET expr RSBRACKET
    (23) func_call -> IDENTIFIER . LPAREN list_args RPAREN
    (24) func_call -> IDENTIFIER . LPAREN RPAREN

    ASSIGN          shift and go to state 45
    LSBRACKET       shift and go to state 43
    CONST           shift and go to state 42
    ADD_OP          reduce using rule 27 (expr -> IDENTIFIER .)
    SUB_OP          reduce using rule 27 (expr -> IDENTIFIER .)
    MUL_OP          reduce using rule 27 (expr -> IDENTIFIER .)
    DIV_OP          reduce using rule 27 (expr -> IDENTIFIER .)
    MOD_OP          reduce using rule 27 (expr -> IDENTIFIER .)
    OR              reduce using rule 27 (expr -> IDENTIFIER .)
    AND             reduce using rule 27 (expr -> IDENTIFIER .)
    CEQ             reduce using rule 27 (expr -> IDENTIFIER .)
    CNE             reduce using rule 27 (expr -> IDENTIFIER .)
    CLT             reduce using rule 27 (expr -> IDENTIFIER .)
    CLE             reduce using rule 27 (expr -> IDENTIFIER .)
    CGT             reduce using rule 27 (expr -> IDENTIFIER .)
    CGE             reduce using rule 27 (expr -> IDENTIFIER .)
    END_STATEMENT   reduce using rule 27 (expr -> IDENTIFIER .)
    LPAREN          shift and go to state 44


state 14

    (5) stmt -> compound_stmt .

    END_STATEMENT   reduce using rule 5 (stmt -> compound_stmt .)
    FUNCTION        reduce using rule 5 (stmt -> compound_stmt .)
    IF              reduce using rule 5 (stmt -> compound_stmt .)
    WHILE           reduce using rule 5 (stmt -> compound_stmt .)
    FOR             reduce using rule 5 (stmt -> compound_stmt .)
    IDENTIFIER      reduce using rule 5 (stmt -> compound_stmt .)
    LPAREN          reduce using rule 5 (stmt -> compound_stmt .)
    INTEGER         reduce using rule 5 (stmt -> compound_stmt .)
    DOUBLE          reduce using rule 5 (stmt -> compound_stmt .)
    SUB_OP          reduce using rule 5 (stmt -> compound_stmt .)
    RETURN          reduce using rule 5 (stmt -> compound_stmt .)
    DISPLAY         reduce using rule 5 (stmt -> compound_stmt .)
    BREAK           reduce using rule 5 (stmt -> compound_stmt .)
    CONTINUE        reduce using rule 5 (stmt -> compound_stmt .)
    TRUE            reduce using rule 5 (stmt -> compound_stmt .)
    FALSE           reduce using rule 5 (stmt -> compound_stmt .)
    DEDENT          reduce using rule 5 (stmt -> compound_stmt .)
    $end            reduce using rule 5 (stmt -> compound_stmt .)


state 15

    (3) program -> END_STATEMENT . stmt program
    (4) stmt -> . simple_stmt
    (5) stmt -> . compound_stmt
    (6) simple_stmt -> . small_stmt END_STATEMENT
    (50) compound_stmt -> . func_def
    (51) compound_stmt -> . if_stmt
    (52) compound_stmt -> . while_stmt
    (53) compound_stmt -> . for_stmt
    (7) small_stmt -> . assignment
    (8) small_stmt -> . const_decl
    (9) small_stmt -> . expr
    (10) small_stmt -> . return_stmt
    (11) small_stmt -> . display
    (12) small_stmt -> . loop_stmt
    (54) func_def -> . FUNCTION head END_STATEMENT INDENT body DEDENT
    (82) if_stmt -> . IF expr COLON END_STATEMENT INDENT body DEDENT
    (83) if_stmt -> . IF expr COLON END_STATEMENT INDENT body DEDENT elseif_list
    (84) if_stmt -> . IF expr COLON END_STATEMENT INDENT body DEDENT elseif_list ELSE COLON END_STATEMENT INDENT body DEDENT
    (85) if_stmt -> . IF expr COLON END_STATEMENT INDENT body DEDENT ELSE COLON END_STATEMENT INDENT body DEDENT
    (79) while_stmt -> . WHILE expr COLON END_STATEMENT INDENT body DEDENT
    (80) for_stmt -> . FOR IDENTIFIER IN RANGE LPAREN expr COMMA expr RPAREN COLON END_STATEMENT INDENT body DEDENT
    (81) for_stmt -> . FOR IDENTIFIER IN IDENTIFIER COLON END_STATEMENT INDENT body DEDENT
    (18) assignment -> . IDENTIFIER ASSIGN expr
    (19) assignment -> . IDENTIFIER ASSIGN LSBRACKET list_args RSBRACKET
    (20) assignment -> . IDENTIFIER LSBRACKET expr RSBRACKET ASSIGN expr
    (21) const_decl -> . IDENTIFIER CONST expr
    (22) const_decl -> . IDENTIFIER CONST LSBRACKET list_args RSBRACKET
    (27) expr -> . IDENTIFIER
    (28) expr -> . IDENTIFIER LSBRACKET expr RSBRACKET
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . func_call
    (31) expr -> . INTEGER
    (32) expr -> . DOUBLE
    (33) expr -> . boolean
    (36) expr -> . expr ADD_OP expr
    (37) expr -> . expr SUB_OP expr
    (38) expr -> . expr MUL_OP expr
    (39) expr -> . expr DIV_OP expr
    (40) expr -> . expr MOD_OP expr
    (41) expr -> . expr OR expr
    (42) expr -> . expr AND expr
    (43) expr -> . expr CEQ expr
    (44) expr -> . expr CNE expr
    (45) expr -> . expr CLT expr
    (46) expr -> . expr CLE expr
    (47) expr -> . expr CGT expr
    (48) expr -> . expr CGE expr
    (49) expr -> . SUB_OP expr
    (13) return_stmt -> . RETURN
    (14) return_stmt -> . RETURN expr
    (17) display -> . DISPLAY LPAREN expr RPAREN
    (15) loop_stmt -> . BREAK
    (16) loop_stmt -> . CONTINUE
    (23) func_call -> . IDENTIFIER LPAREN list_args RPAREN
    (24) func_call -> . IDENTIFIER LPAREN RPAREN
    (34) boolean -> . TRUE
    (35) boolean -> . FALSE

    FUNCTION        shift and go to state 1
    IF              shift and go to state 24
    WHILE           shift and go to state 3
    FOR             shift and go to state 9
    IDENTIFIER      shift and go to state 13
    LPAREN          shift and go to state 22
    INTEGER         shift and go to state 7
    DOUBLE          shift and go to state 32
    SUB_OP          shift and go to state 28
    RETURN          shift and go to state 6
    DISPLAY         shift and go to state 11
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 31
    TRUE            shift and go to state 8
    FALSE           shift and go to state 23

    func_call                      shift and go to state 25
    if_stmt                        shift and go to state 26
    func_def                       shift and go to state 16
    simple_stmt                    shift and go to state 17
    assignment                     shift and go to state 18
    boolean                        shift and go to state 4
    for_stmt                       shift and go to state 20
    stmt                           shift and go to state 46
    display                        shift and go to state 33
    small_stmt                     shift and go to state 2
    while_stmt                     shift and go to state 30
    return_stmt                    shift and go to state 5
    loop_stmt                      shift and go to state 21
    expr                           shift and go to state 27
    const_decl                     shift and go to state 10
    compound_stmt                  shift and go to state 14

state 16

    (50) compound_stmt -> func_def .

    FUNCTION        reduce using rule 50 (compound_stmt -> func_def .)
    IF              reduce using rule 50 (compound_stmt -> func_def .)
    WHILE           reduce using rule 50 (compound_stmt -> func_def .)
    FOR             reduce using rule 50 (compound_stmt -> func_def .)
    IDENTIFIER      reduce using rule 50 (compound_stmt -> func_def .)
    LPAREN          reduce using rule 50 (compound_stmt -> func_def .)
    INTEGER         reduce using rule 50 (compound_stmt -> func_def .)
    DOUBLE          reduce using rule 50 (compound_stmt -> func_def .)
    SUB_OP          reduce using rule 50 (compound_stmt -> func_def .)
    RETURN          reduce using rule 50 (compound_stmt -> func_def .)
    DISPLAY         reduce using rule 50 (compound_stmt -> func_def .)
    BREAK           reduce using rule 50 (compound_stmt -> func_def .)
    CONTINUE        reduce using rule 50 (compound_stmt -> func_def .)
    TRUE            reduce using rule 50 (compound_stmt -> func_def .)
    FALSE           reduce using rule 50 (compound_stmt -> func_def .)
    DEDENT          reduce using rule 50 (compound_stmt -> func_def .)
    END_STATEMENT   reduce using rule 50 (compound_stmt -> func_def .)
    $end            reduce using rule 50 (compound_stmt -> func_def .)


state 17

    (4) stmt -> simple_stmt .

    END_STATEMENT   reduce using rule 4 (stmt -> simple_stmt .)
    FUNCTION        reduce using rule 4 (stmt -> simple_stmt .)
    IF              reduce using rule 4 (stmt -> simple_stmt .)
    WHILE           reduce using rule 4 (stmt -> simple_stmt .)
    FOR             reduce using rule 4 (stmt -> simple_stmt .)
    IDENTIFIER      reduce using rule 4 (stmt -> simple_stmt .)
    LPAREN          reduce using rule 4 (stmt -> simple_stmt .)
    INTEGER         reduce using rule 4 (stmt -> simple_stmt .)
    DOUBLE          reduce using rule 4 (stmt -> simple_stmt .)
    SUB_OP          reduce using rule 4 (stmt -> simple_stmt .)
    RETURN          reduce using rule 4 (stmt -> simple_stmt .)
    DISPLAY         reduce using rule 4 (stmt -> simple_stmt .)
    BREAK           reduce using rule 4 (stmt -> simple_stmt .)
    CONTINUE        reduce using rule 4 (stmt -> simple_stmt .)
    TRUE            reduce using rule 4 (stmt -> simple_stmt .)
    FALSE           reduce using rule 4 (stmt -> simple_stmt .)
    DEDENT          reduce using rule 4 (stmt -> simple_stmt .)
    $end            reduce using rule 4 (stmt -> simple_stmt .)


state 18

    (7) small_stmt -> assignment .

    END_STATEMENT   reduce using rule 7 (small_stmt -> assignment .)


state 19
